Add some test configs that use +UseAltGCForwarding